Fix spacing of modal content

--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,16 @@
   width: 85%;
   height: 85%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
 
+#selection-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
 .avatar-wrapper {
   background-color: rgb(116, 237, 95);
   height: 100px;
@@ -60,7 +66,6 @@
   width: calc(100% / 3);
   height: calc(100% / 3);
   border: 1px solid black;
-
   display: flex;
   align-items: center;
   justify-content: center;
